<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.alert.me.utils.BaseCustomDialog.DialogListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_filled_dark_blue_10sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_alert"
            app:tint="@color/red_light" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            tools:text="@string/message" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/bg_button_gray_light_2sdp"
                android:onClick="@{(v)->callback.onViewClick(v)}"
                android:text="@string/cancel"
                android:textColor="@color/color_dark_blue" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/bg_button_light_red"
                android:onClick="@{(v)->callback.onViewClick(v)}"
                android:text="@string/yes"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</layout>
